The fixes involve GPU, processing power of phones and how devices handle transitions, transformations, and animations. Will not be able to fix lag issue on smaller devices. This is an issue with the phones and not the markup/code.

--- a/style.css
+++ b/style.css
@@ -715,7 +715,6 @@ font-family: 'Montserrat Alternates', sans-serif; **Heading Font***/
 
 @-o-keyframes rotate8 {
 	0% {
-		-webkit-transform: translateZ(0);
 		-webkit-transform: rotate(0deg);
 		-o-transform: rotate(0deg);
 		-moz-transform: rotate(0deg);
@@ -723,7 +722,6 @@ font-family: 'Montserrat Alternates', sans-serif; **Heading Font***/
 		transform: rotate(0deg);
 	}
 	100% {
-		-webkit-transform: translateZ(0);
 		-webkit-transform: rotate(360deg);
 		-o-transform: rotate(360deg);
 		-moz-transform: rotate(360deg);
@@ -734,7 +732,6 @@ font-family: 'Montserrat Alternates', sans-serif; **Heading Font***/
 
 @-moz-keyframes rotate8 {
 	0% {
-		-webkit-transform: translateZ(0);
 		-webkit-transform: rotate(0deg);
 		-o-transform: rotate(0deg);
 		-moz-transform: rotate(0deg);
@@ -742,7 +739,6 @@ font-family: 'Montserrat Alternates', sans-serif; **Heading Font***/
 		transform: rotate(0deg);
 	}
 	100% {
-		-webkit-transform: translateZ(0);
 		-webkit-transform: rotate(360deg);
 		-o-transform: rotate(360deg);
 		-moz-transform: rotate(360deg);
@@ -753,7 +749,6 @@ font-family: 'Montserrat Alternates', sans-serif; **Heading Font***/
 
 @-webkit-keyframes rotate8 {
 	0% {
-		-webkit-transform: translateZ(0);
 		-webkit-transform: rotate(0deg);
 		-o-transform: rotate(0deg);
 		-moz-transform: rotate(0deg);
@@ -761,7 +756,6 @@ font-family: 'Montserrat Alternates', sans-serif; **Heading Font***/
 		transform: rotate(0deg);
 	}
 	100% {
-		-webkit-transform: translateZ(0);
 		-webkit-transform: rotate(360deg);
 		-o-transform: rotate(360deg);
 		-moz-transform: rotate(360deg);
@@ -772,7 +766,6 @@ font-family: 'Montserrat Alternates', sans-serif; **Heading Font***/
 
 @keyframes rotate8 {
 	0% {
-		-webkit-transform: translateZ(0);
 		-webkit-transform: rotate(0deg);
 		-o-transform: rotate(0deg);
 		-moz-transform: rotate(0deg);
@@ -780,7 +773,6 @@ font-family: 'Montserrat Alternates', sans-serif; **Heading Font***/
 		transform: rotate(0deg);
 	}
 	100% {
-		-webkit-transform: translateZ(0);
 		-webkit-transform: rotate(360deg);
 		-o-transform: rotate(360deg);
 		-moz-transform: rotate(360deg);
